# FinCrime-Platform.

./: .gitignore  README.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md
.streamlit/: config.toml
configs/: rules.yaml
data/sample_seed/: dim_accounts_sample.csv  dim_entities_sample.csv  fact_alerts_sample.csv  fact_transactions_sample.csv
data/synthetic/: dim_accounts.parquet  dim_entities.parquet  fact_alerts.parquet
notebooks/: 01_model_training_and_eda.ipynb
scripts/: generate_data.py  run_pipeline.py  run_ui.sh  train_model.py
src/features/: pipeline.py
src/generator/: data_generator.py
src/models/: ml_detector.py  rules.py  shap_explainer.pkl  xgb_model.pkl
src/ui/: app.py  styles.css  ui_components.py
