[project]
name = "fincrime_capstone"
version = "0.1.0"
description = "End-to-End Financial Crime Detection Platform"
authors = [
    {name = "Shashank Gogula"}
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "polars>=0.20.0",
    "numpy<2",
    "pandas>=2.0.0",
    "faker>=20.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "networkx>=3.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
